syntax = "proto3";
package dk.via.sep;
option java_multiple_files = true;
option csharp_namespace = "GrpcHousePalClient";

message HouseOwnerRequest {
  int32 ownerId = 1;
}

message HouseOwnerResponse {
  int32 ownerId = 1;
  string address = 2;
  string biography = 3;
}

//message HouseOwner {
//  int32 ownerId = 1;
//  string address = 2;
//  string biography = 3;
//}

message CreateHouseOwnerRequest {
  string address = 1;
  string biography = 2;
}

message UpdateHouseOwnerRequest {
  int32 ownerId = 1;
  string address = 2;
  string biography = 3;
}

service HouseOwnerService {
  rpc GetHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
  rpc CreateHouseOwner (CreateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc UpdateHouseOwner (UpdateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc DeleteHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
}